# controls-engineering-in-frc

./: .gitignore  .pylintrc  INP-00-glossary  Makefile  README.md  TODO.md  app-integral-control.tex  app-integral_control.tex  app-kalman-luenberger.tex  app-kalman_luenberger.tex  app-luenberger-observer-derivs.tex  app-optimal-control-law-deriv.tex  app-steady-state-error.tex  app-tf-feedback-deriv.tex  app-tf_feedback_deriv.tex  appendices.tex  application-notes.tex  azure-pipelines.yml  back.tex  backmatter.tex  check_links.py  check_tex_includes.py  classical.tex  conclusion.tex  control-system-basics.tex  controls-engineering-in-frc-ebook.tex  controls-engineering-in-frc-printer.tex  controls-engineering-in-frc.bib  controls-engineering-in-frc.tex  deputils.py  digital-control.tex  format_code.py  front.tex  frontmatter.tex  generate_frccontrol_plots.py  glossary-entries.tex  glossary.tex  going-digital.tex  implementation-steps.tex  implementation.tex  (+42 more)
appendices/: calculus-methods.tex  case-studies-of-laplace-domain-analysis.tex  case_study_qr_ff.py  case_study_ss_ff.py  classical-control-theory.tex  derivations.tex  feedforwards.tex  installing-python-control.tex  installing-python-packages.tex  integral-control.tex  laplace-domain-analysis.tex  laplace-transform.tex  linear-quadratic-regulator.tex  luenberger-observer-derivs.tex  nonlinear-control.tex  optimal-control-law-deriv.tex  qr-weighted-linear-plant-inversion.tex  robust-control.tex  simplifying-block-diagrams.tex  ss-canonical-forms.tex  steady-state-error.tex  steady-state-feedforward.tex  tf-feedback-deriv.tex  two-state-ff-deriv.tex
application-notes/: feedforwards.tex  implementation-steps.tex  integral-control.tex  model-augmentation.tex  motion-profiles.tex
backmatter/: bibliography.tex  cover.tex  glossary.tex  index.tex
bookutil/: pyproject.toml  setup.py
bookutil/bookutil/: drivetrain.py  latex.py  linear_mpc.py  nonlinear_mpc.py  plotutil.py  pose2d.py  systems.py  trajectory.py  twist2d.py
code/: LICENSE.txt  (+70 more)
motion-planning/: 1-dof-motion-profiles.tex  CMakeLists.txt  DoubleIntegratorMinimumTime.cpp  configuration-spaces.tex  configuration_spaces.py  double_integrator.py  double_integrator_minimum_time.py  motion-profiles.tex  motion_profiles.py  trajectory-optimization.tex
motion-planning/configuration-spaces/: 1-dof-systems.tex  configuration_spaces.py  introduction.tex  multi-dof-systems.tex  state-machine-validation-with-safe-sets.tex  waypoint-planning.tex  waypoint-traversal.tex
motion-planning/motion-profiles/: 1-dof-motion-profiles.tex  2-dof-motion-profiles.tex  drivetrain-motion-planning-software.tex  motion_profiles.py
motion-planning/trajectory-optimization/: diff_drive_mpc.py  double_integrator.py  flywheel_mpc.py  model-predictive-control.tex  solver-implementation.tex  solving-optimization-problems-with-sleipnir.tex
(+566 files in other folders)
