[project]
name = "bookutil"
description = "Utility functions for controls book"
license = "BSD-3-Clause"
version = "0.0.1"
dependencies = ["matplotlib"]

  [[project.authors]]
  name = "Tyler Veness"
  email = "calcmogul@gmail.com"

  [project.urls]
  Homepage = "https://github.com/calcmogul/controls-engineering-in-frc"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
